--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -4,6 +4,7 @@
   position: absolute;
   top: 30px;
   right: 50px;
+  z-index: 50;
 
   @media (min-width: '600px') {
     right: 100px;
@@ -54,6 +55,5 @@
 
 .active {
   color: $second__color;
-  //border: 1px solid $second__color;
   background-color: rgba($color: rgb(75, 74, 74), $alpha: .3);
 }
