--- a/src/general.scss
+++ b/src/general.scss
@@ -19,10 +19,23 @@ ul {
   list-style-type: none;
 }
 
+.mobile-screen {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 100vh;
+
+  @media (min-width: "500px") {
+    display: none;
+  }
+}
+
 .App {
   display: none;
 
   @media (min-width: "500px") {
+    height: 100vh;
     display: block;
     background: center / cover no-repeat url("./accets/background.png");
   }
