--- a/src/general.scss
+++ b/src/general.scss
@@ -35,7 +35,7 @@ ul {
   display: none;
 
   @media (min-width: "500px") {
-    height: 100vh;
+    height: 100%;
     display: block;
     background: center / cover no-repeat url("./accets/background.png");
   }
